# BigFun

./: CMakeLists.txt  README.md  gamesave.json
include/: Board.h  ColoredSymbol.h  DisplayManager.h  Game.h  GameManager.h  GameSetup.h  InteractiveHelpers.h  NormalSymbol.h  Player.h  SaveData.h  SaveManager.h  Symbol.h
src/: Board.cpp  ColoredSymbol.cpp  DisplayManager.cpp  Game.cpp  GameManager.cpp  GameSetup.cpp  InteractiveHelpers.cpp  NormalSymbol.cpp  Player.cpp  SaveData.cpp  SaveManager.cpp  Symbol.cpp  main.cpp
